Changes in SQUAREM version 2010.8-1 

   o	first release:  August 8, 2010