@@ -1,4 +1,6 @@
 Package: SQUAREM
+Version: 2010.8-2
+Date: August 09, 2010
 Title: Squared extrapolation methods for accelerating fixed-point
         iterations
 Description: Algorithms for accelerating the convergence of slow,
@@ -10,14 +12,13 @@ Description: Algorithms for accelerating the convergence of slow,
         vignette("SQUAREM").
 Depends: R (>= 2.10.0)
 Suggests: setRNG
-Version: 2010.8-1
 LazyLoad: yes
 License: GPL (>= 2)
 Author: Ravi Varadhan
-Maintainer: Ravi Varadhan and Paul Gilbert
+Maintainer: Ravi Varadhan <rvaradhan@jhmi.edu> and Paul Gilbert
         <pgilbert@bank-banque-canada.ca>
 URL:
         http://www.jhsph.edu/agingandhealth/People/Faculty_personal_pages/Varadhan.html
-Packaged: 2010-08-08 17:39:18 UTC; varadhan
+Packaged: 2010-08-09 16:17:57 UTC; rvaradh1
 Repository: CRAN
-Date/Publication: 2010-08-08 18:54:28
+Date/Publication: 2010-08-09 16:39:48
