@@ -1,3 +1,3 @@
-License: GPL Version  2 or later. 
+License: GPL Version 2 or later. 
 
 Copyright 2010, Ravi Varadhan, Johns Hopkins University.
